fixed alignment issue in grid mode for larger screen and added truncation for article preview sections

--- a/src/Components/ArticleCard/ArticleCard.module.scss
+++ b/src/Components/ArticleCard/ArticleCard.module.scss
@@ -1,18 +1,14 @@
 .articleCardContainer {
-  width: 100%;
   height: fit-content;
   display: flex;
   flex-direction: column;
 
   .articleCardThumbnailContainer {
-    width: 100%;
     height: 10rem;
     position: relative;
 
     .articleCardThumbnail {
       border-radius: 10px;
-      width: 100%;
-      height: 100%;
     }
   }
 
@@ -43,10 +39,24 @@
   .articleCardContainer {
     .articleMainPreview {
       .articleContentPreview {
-        display: block;
         font-size: 0.9rem;
         padding-top: 0.5rem;
         color: slategray;
+
+        -webkit-line-clamp: 3;
+      }
+
+      .articleTitlePreview {
+        -webkit-line-clamp: 2;
+      }
+
+      .articleContentPreview,
+      .articleTitlePreview {
+        display: -webkit-box;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: normal;
       }
     }
   }
