--- a/src/Components/ArticlePreviewSection/ArticlePreviewSection.module.scss
+++ b/src/Components/ArticlePreviewSection/ArticlePreviewSection.module.scss
@@ -16,7 +16,7 @@
   .articleGridContainer {
     .articleList {
       display: grid;
-      grid-template-columns: repeat(2, 1fr);
+      grid-template-columns: repeat(2, minmax(0, 1fr));
     }
   }
 }
@@ -26,7 +26,7 @@
     margin: auto;
     .articleList {
       display: grid;
-      grid-template-columns: repeat(3, 1fr);
+      grid-template-columns: repeat(3, minmax(0, 1fr));
     }
   }
 }
@@ -38,7 +38,7 @@
 
     .articleList {
       display: grid;
-      grid-template-columns: repeat(4, 1fr);
+      grid-template-columns: repeat(4, minmax(0, 1fr));
       column-gap: 1rem;
     }
   }
